<resources>

                 <!--APP -->

    <string name="app_name">My small community</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1711696742396736</string>

                  <!-- Registration -->

    <string name="sign_in">Sign in</string>
    <string name="family_status">Family status</string>
    <string name="community">Community</string>
    <string name="interest">Interest</string>
    <string name="btn_next">NEXT</string>
    <string name="complete_registration">Complete registration</string>
    <string name="btn_back">BACK</string>
    <string name="btn_finish">FINISH</string>
    <string name="maried">Maried</string>
    <string name="family">Family</string>
    <string name="single">Single</string>

    <string name="welcome">Welcome to your small community!</string>
    <string name="login_text">Bla bla bla</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="family_status">
        <item>Married</item>
        <item>Single</item>
    </string-array>

                 <!-- Drawer nawigation -->

    <string name="stories_item">Stories</string>
    <string name="messages_item">Messages</string>
    <string name="gallery_item">Gallery</string>
    <string name="event_item">Event</string>
    <string name="people_item">People</string>
    <string name="group_item">Group</string>
    <string name="directories_item">Directories</string>
    <string name="settings_item">Settings</string>
    <string name="notification_item">Notifications</string>
    <string name="logout_item">Log out</string>
    <string name="button_get_started">Get Started</string>
    <string name="button_sign_in">Sign in with facebook</string>

    <string name="settings">Settings</string>
    <string name="invite_from">From</string>
    <string name="invite_to">To</string>
    <string name="invite_msc">My small comunities
    \n \n
    I invite you join the My small communities
        http://www.mysmallcommunity.com/</string>
    <string name="invite_message">I invite you join the My small communities
        http://www.mysmallcommunity.com/</string>
</resources>
