<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/familyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
        android:gravity="center_horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_family_FFS"
            android:drawableTop="@drawable/selector_family"
            android:button="@null"
            style="@style/family_radio"
            android:text="@string/family" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_maried_FFS"
            android:drawableTop="@drawable/selector_family"
            android:button="@null"
            android:checked="true"
            style="@style/family_radio"
            android:text="@string/maried"
/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_single_FFS"
            android:drawableTop="@drawable/selector_family"
            android:button="@null"
            style="@style/family_radio"
            android:text="@string/single" />

    </LinearLayout>


</RelativeLayout>