<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/layoutNum"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/color_grey_50"
        android:elevation="3dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/btn_facebook_ARS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/facebook_img"
                style="@style/steps_radio"
                android:background="@drawable/selector_fb"
                android:gravity="bottom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_in" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_region_ARS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/region_img"
                style="@style/steps_radio"
                android:checked="true"
                android:background="@drawable/selector_home"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/community" />
        </RelativeLayout>

        <RelativeLayout

            android:id="@+id/btn_family_ARS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/family_img"
                style="@style/steps_radio"
                android:background="@drawable/selector_family"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family_status"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_interes_ARS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/interes_img"
                style="@style/steps_radio"
                android:background="@drawable/selector_interes"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interest"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v4.view.ViewPager
        android:id="@+id/vpFragmentPager_RS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/separateView"
        android:layout_below="@+id/layoutNum"
       />

    <View
        android:id="@+id/separateView"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/layoutNavigation"
        android:background="@color/color_grey_400" />


    <RelativeLayout
        android:id="@+id/layoutNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_back_RS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_chevron_left_black_24dp"
            android:gravity="center_vertical"
            android:text="@string/btn_back"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_18"
            android:padding="@dimen/btn_navig_padding" />

        <TextView
            android:id="@+id/tv_next_RS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:gravity="center_vertical"
            android:text="@string/btn_next"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_18"
            android:padding="@dimen/btn_navig_padding" />

        <com.thinkmobiles.mysmallcommunity.ui.custom_views.CirclePageIndicator
            android:id="@+id/cpiIndicator_RS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:fillColor="@color/color_green_accent_400"
            app:pageColor="@color/color_grey_500"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/abc_control_corner_material"
            android:paddingRight="@dimen/abc_control_corner_material"
            />

    </RelativeLayout>


</RelativeLayout>